# sphinx_docbook

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: buildtest.yml
sphinx_docbook/: docbook_builder.py  docbook_writer.py
tests/: test-requires.txt
tests/autodoc_validation/source/: conf.py  index.rst
tests/generic_sphinx/source/: conf.py  index.rst
tests/sphinxarg_validation/source/: conf.py  index.rst
